feat: Upload user avatar to s3
