# api/user/controller.go
@@ -16,6 +16,7 @@ import (
 // @Accept json
 // @Produce json
 // @Success 200 {object} common.JSONResult{data=[]User}
+// @Security ApiKeyAuth
 // @Router /user [get]
 func GetListUserAction(c *gin.Context) {
 	fmt.Print(c.Get("CurrentUser"))
@@ -32,6 +33,7 @@ func GetListUserAction(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Success 200 {object} common.JSONResult{data=User}
+// @Security ApiKeyAuth
 // @Router /user [post]
 func CreateUserAction(c *gin.Context) {
 	var request CreateUserRequest
@@ -63,6 +65,45 @@ func CreateUserAction(c *gin.Context) {
 	user.Password = passwordHashed
 
 	common.DB.Create(&user)
+
+	c.JSON(http.StatusOK, common.JSONResult{Code: 200, Message: "Ok", Data: user})
+}
+
+// PingExample godoc
+// @Summary User Update Avatar
+// @Param id path int true "User ID"
+// @Param file formData file true "file"
+// @Description create user
+// @Tags user
+// @Accept json
+// @Produce json
+// @Success 200 {object} common.JSONResult{data=User}
+// @Security ApiKeyAuth
+// @Router /user/{id}/avatar-upload [post]
+func UserUpdateAvatarAction(c *gin.Context) {
+	file, err := c.FormFile("file")
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Required file"})
+		return
+	}
+
+	userID := c.Params.ByName("id")
+	var user User
+	if r := common.DB.First(&user, userID); r.RowsAffected == 0 {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "User not found"})
+		return
+	}
+
+	common.UploadLocal(c, file)
+	fileUploadedPath, err := common.UploadS3(file)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Upload file fail"})
+		return
+	}
+	common.RemoveFile(file.Filename)
+
+	user.Avatar = fileUploadedPath
+	common.DB.Save(&user)
 
 	c.JSON(http.StatusOK, common.JSONResult{Code: 200, Message: "Ok", Data: user})
 }
